Update image source and email link format

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="layout">
       <aside class="sidebar" id="about">
        <section class="widget">
-  <img src="https://i.ibb.co/cjNdLDm/Cropped-aki-smile-removebg-preview.png" alt="Achilles" class="about-image">
+  <img src="Cropped-aki-smile-removebg-preview.png" alt="Achilles" class="about-image">
   <h3 id="about-title">About me</h3>
   <p>"Hi! I’m Achilles. I’m currently diving deep into the fundamentals of front-end development, focusing on building clean, responsive web pages from the ground up. I believe that the best way to master a craft is by doing, so I’m documenting my journey—sharing every breakthrough, bug, and design discovery along the way. My goal is to turn these small experiments into a solid foundation for modern web engineering." </p>
 </section>
@@ -115,7 +115,7 @@
      
 
     <footer class="site-footer" id="contact">
-      <p>© 2026 Achilles' Learning Log • <a href="20220024440@my.xu.edu.ph">20220024440@my.xu.edu.ph</a></p>
+      <p>© 2026 Achilles' Learning Log • <a href="mailto:20220024440@my.xu.edu.ph">20220024440@my.xu.edu.ph</a></p>
       <ul class="footer-links">
         <li><a href="#">Archive</a></li>
         <li><a href="#about">About</a></li>
