Update image sources to local files for YES and NO

--- a/Childhtml/Valentine.html
+++ b/Childhtml/Valentine.html
@@ -113,7 +113,7 @@ like when you press Yes, a picture of me kissing emerges and is enlarged, and ev
             
             if (choice === 'yes') {
                 // Using your new YES image link
-                imgElement.src = 'https://i.ibb.co/ZpcBXbMB/YES.png'; 
+                imgElement.src = 'YES.png'; 
                 imgElement.classList.add('grow-animation');
                 displayDiv.style.display = 'block';
                 for(let i=0; i<30; i++) {
@@ -126,7 +126,7 @@ like when you press Yes, a picture of me kissing emerges and is enlarged, and ev
                 noBtn.setAttribute('onclick', "respond('yes')");
                 
                 // Using your new NO image link
-                imgElement.src = 'https://i.ibb.co/FbxbFCH8/NO.png';
+                imgElement.src = 'NO.png';
                 displayDiv.style.display = 'block';
             }
         }
